--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,14 +22,11 @@
     "python.testing.unittestArgs": [
         "-v",
         "-s",
-        ".",
+        "./linked-list",
         "-p",
         "*_test.py"
     ],
-    "python.testing.pytestEnabled": true,
+    "python.testing.pytestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestArgs": [
-        "."
-    ]
+    "python.testing.unittestEnabled": true,
 }
