--- a/.editorconfig
+++ b/.editorconfig
@@ -17,3 +17,7 @@ trim_trailing_whitespace = true
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.py]
+indent_style = space
+indent_size = 4
