--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,10 +18,5 @@
 		"titleBar.inactiveBackground": "#21573299",
 		"titleBar.inactiveForeground": "#e7e7e799"
 	},
-	"peacock.color": "#215732",
-	"python.testing.unittestArgs": ["-v", "-p", "*_test.py"],
-	"python.testing.pytestEnabled": true,
-	"python.testing.nosetestsEnabled": false,
-	"python.testing.unittestEnabled": false,
-	"python.testing.pytestArgs": ["."]
+	"peacock.color": "#215732"
 }
